# mca-solution-jgdaun

./: .gitignore  LICENSE  README.md
.github/workflows/: backend-ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  frontend-ci.yml  infrastructure-ci.yml  security-scan.yml
documentation/: Software Requirements Specifications (SRS).md  Technical Specifications.md
infrastructure/docker/: backend.dockerfile  frontend.dockerfile  nginx.conf  ocr.dockerfile
infrastructure/k8s/: autoscaling.yaml  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  ocr-deployment.yaml  secrets.yaml  service.yaml
infrastructure/monitoring/: datadog-agent.yaml  prometheus.yml
infrastructure/scripts/: backup.sh  deploy.sh  health-check.sh  restore.sh  rollback.sh
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
infrastructure/terraform/environments/dev/: main.tf
infrastructure/terraform/environments/prod/: main.tf
infrastructure/terraform/environments/staging/: main.tf
src/backend/: .env.example  Dockerfile  README.md  alembic.ini  celeryconfig.py  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml
src/backend/app/: __init__.py
src/backend/app/api/: __init__.py  deps.py
src/backend/app/api/v1/: __init__.py
src/backend/app/api/v1/endpoints/: __init__.py  auth.py  documents.py  email.py  ocr.py  users.py  webhooks.py
src/backend/app/core/: __init__.py  celery_app.py  config.py  exceptions.py  logging.py  security.py
src/backend/app/db/: __init__.py  base.py  init_db.py  session.py
src/backend/app/middleware/: __init__.py  auth.py  cors.py  logging.py
src/backend/app/models/: __init__.py  document.py  email.py  user.py  webhook.py
src/backend/app/schemas/: __init__.py  document.py  email.py  ocr.py  user.py  webhook.py
src/backend/app/services/: __init__.py  auth_service.py  document_service.py  email_service.py  ocr_service.py  webhook_service.py
src/backend/app/tasks/: __init__.py  document_tasks.py  email_tasks.py  ocr_tasks.py  webhook_tasks.py
src/backend/app/utils/: __init__.py  email.py  security.py  storage.py  validation.py
src/backend/migrations/: __init__.py  env.py  script.py.mako
src/backend/scripts/: celery_worker.sh  create_superuser.py  prestart.sh
src/web/: .env.example  .eslintrc.js  .prettierrc  README.md  index.html  postcss.config.js  tailwind.config.js  vite.config.ts
src/web/public/: robots.txt
src/web/src/: App.tsx  main.tsx  vite-env.d.ts
(+91 files in other folders)
